tests/fixtures/invalid/block_typedef_aggregate_definition.c
int main(void) {
    typedef struct Local {
        int value;
    } Local;
    Local local = {1};
    return local.value;
}
